			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.science.uva.nl/bugzilla/
					--------------------------------------

  * PORT: Bug#212: Paralel make.  Keri Harris.

  * FIXED: Bug#201: graphical tracer running out of local stack.  
    Robert Oschler.

  * FIXED: Avoid undefined pce_expansion:push_compile_operators/1 in
    Prolog stack utility.  Mike Elston.

  * MODIFIED: relative_to option of absolute_file_name/3 is considered a
    directory if the directory exists or ends in /.  Otherwise it is assumed
    to be a file.

===================================
VERSION 5.6.20 (September 18, 2006)
===================================

  * FIXED: between(N, infinite, X).  Matt Lilley.

===================================
VERSION 5.6.19 (September 11, 2006)
===================================

  * MODIFIED: More efficient DCG translation.  No longer produces 'C'/3
    calls.  'C'/3 has been moved to backcomp.pl

  * FIXED: Bug#205: support GNU-make when not named make.  Marc Espie.

  * FIXED: Bug 204: ** for rationals.  Mike Elston.

  * ADDED: Library heaps.pl.  Adapted by Markus Triska.

  * FIXED: Renamed depreciated --> deprecated.  Mike Elston.

================================
VERSION 5.6.18 (August 24, 2006)
================================

  * FIXED: format_time/3 can produce inconsistent results on first call.
    Keri Harris.

  * FIXED: Updated www_open_url for netscape compatible browsers on Unix.
    Cleanup of comments, etc.  Work-around lacking exit code of firefox
    -remote commands.

  * FIXED: Source-level debugger for a --> { x }, !, y.

  * FIXED: write_canonical(a|b).  Lukas Degener.

  * ADDED: Support for large integers in succ/2, plus/3 and between/3.
    Bart Demoen.

  * FIXED: Domain error on random/1.   Lukas Degener.

  * FIXED: pl-tai.c portability problem for Solaris (asctime_r). 